# resources/lib/generated/openapi.json
@@ -921,6 +921,10 @@
             "default": false,
             "type": "boolean"
           },
+          "isTwoFactorEnabled": {
+            "default": false,
+            "type": "boolean"
+          },
           "isVerified": {
             "default": false,
             "type": "boolean"
